--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "material-design-icons-iconfont": "^4.0.2",
+    "underscore": "^1.9.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-swal": "^0.1.0",
     "vuetify": "^1.3.5",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
